# MetaOptimize

./: MetaOptimize.rtf  README.md  pyproject.toml
cifar10/: load_data.py  train.py
cifar10/Optimizers/: HF.py  build_optimizer.py
imagenet/: build_network.py  load_data.py  train.py
imagenet/Optimizers/: HF.py  build_optimizer.py
meta_optimize/: MetaOptimize_AdamW_Lion_hg.py  MetaOptimize_AdamW_Lion_hg_jax.py  __init__.py
tinystories/: HF.py  build_optimizer.py  cedar_commands.sh  model.py  run  runq  tinystories.py  train.py
